# gatent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: day0-unpack.yml
gatent/: __init__.py  deploy.py
gatent/adapters/: __init__.py  all.py  all_cloud.py  base.py  registry.py
gatent/adapters/config_stores/: notion.py  yaml_files.py
gatent/adapters/extractors/: css.py  json_path.py
gatent/adapters/notifiers/: ntfy.py  stdout.py
gatent/adapters/runners/: browser_playwright.py  local_python.py
gatent/adapters/sinks/: json_lines.py  webhook.py
gatent/adapters/state_stores/: sqlite_store.py  supabase.py
gatent/adapters/transformers/: cast.py  coalesce.py  regex.py
gatent/adapters/triggers/: cron.py  manual.py
gatent/adapters/vaults/: __init__.py  audit_sink.py  cloud_vault.py  envelope.py  keychain.py  kms_aws.py  kms_local.py  postgres_vault_storage.py  vault_storage_protocol.py
gatent/core/: __init__.py  budget.py  config_store_protocol.py  diff.py  engine.py  pipeline.py  retry.py  router.py  state_store_protocol.py  templates.py  types.py  ulid_util.py  vault_protocol.py
gatent/protocols/cli/: __init__.py  main.py
gatent/protocols/cli/commands/: auth.py  events.py  modules.py  run.py  runs.py  serve.py
gatent/protocols/mcp/: __init__.py  server.py
gatent/protocols/rest/: __init__.py  dependencies.py  server.py
gatent/protocols/rest/routes/: account.py  auth.py  events.py  health.py  modules.py  runs.py
gatent/protocols/shared/: engine_factory.py  error_mapping.py
modules/: kdp-title-status.yaml  ntfy-approval-gate.yaml  ntfy-approval-response.yaml  procore-rfi-watcher.yaml  rec-gov-availability.yaml  rec-gov-book.yaml
