[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gatent"
version = "0.1.0"
description = "Gatent - the web action layer for agents. Declarative watch/extract/diff/notify modules exposed over REST, MCP, and CLI."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Empty-M Software LLC" },
]
keywords = ["agents", "automation", "mcp", "web-scraping", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "aiosqlite>=0.19",
    "httpx>=0.27",
    "lxml>=5.0",
    "cssselect>=1.2",
    "jsonpath-ng>=1.6",
    "pyyaml>=6.0",
    "keyring>=25.0",
    "croniter>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "click>=8.1",
    "mcp>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
cloud = [
    "cryptography>=42.0",
    "boto3>=1.34",
    "asyncpg>=0.29",
    "supabase>=2.4",
    "notion-client>=2.2",
    "playwright>=1.44",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/gatent/gatent"
Repository = "https://github.com/gatent/gatent"
Issues = "https://github.com/gatent/gatent/issues"

[project.scripts]
gatent = "gatent.protocols.cli.main:cli"

[project.entry-points."gatent.protocols"]
rest = "gatent.protocols.rest:app"
mcp = "gatent.protocols.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["gatent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
